--- a/code.html
+++ b/code.html
@@ -14,14 +14,17 @@
 
     <div class="div">
 
-        <number>9874857485</number>
+        <I>Call:9878584785</I><div class="num"><number></number></div>
+
+        
 
     </div>
 
 
     <div class="ndiv">
+        <div class="nndiv">
 <h1><strong>Super Infinity Classes</strong></h1>
-<h5>Learn programming in the simplest way possible</h5>
+<h5>Learn programming in the simplest way possible</h5></div>
 
     </div>
 
@@ -30,16 +33,21 @@
 
     <div class="div">
 
-      <button>HOME</button>  
-      <button>  ABOUT US</button> 
-      <button>MEDIA</button> 
-      <button>COURSE</button> 
-      <button>BATCHES</button> 
-      <button>CONTACT US</button>
+        <div class="btn">
+
+      <button class="btn1">HOME</button>  
+      <button class="btn1">  ABOUT US</button> 
+      <button class="btn1">MEDIA</button> 
+      <button class="btn1">COURSE</button> 
+      <button class="btn1">BATCHES</button> 
+      <button class="btn1">CONTACT US</button></div>
       
    
 
     </div>
+
+
+    <div class="body">
 <h1>Batches</h1>
 <br>
 <br>
@@ -53,7 +61,8 @@
 
 <p>*Click on ‘Admission open’ link given in the last column in each row to know about FEE, Syllabus, Days, Duration, prerequisites and other facilities. You can take admission online from this site only.</p>
 
-
+<br>
+<br>
 <table>
 
 
@@ -188,5 +197,6 @@
         <td>Soon</td>
         </tr>
     </table>
+</div>
 </body>
 </html>
